@@ -1,5 +1,6 @@
 2009-03-24  David Moore  <dcm@acm.org>
 
+	* python/pyiptcdata.c: Updated save patch from Chris Mayo.
 	* po/de.po, iptc/po/de.po: Added German translation, submitted by
 	Chris Leick.
 	* libiptcdata/iptc-dataset.c: Check for NULL tag name in
